tests/ui/async-await/pin-needed-to-poll.stderr
error[E0599]: no method named `poll` found for struct `Sleep` in the current scope
  --> $DIR/pin-needed-to-poll.rs:42:20
   |
LL | struct Sleep;
   | ------------ method `poll` not found for this struct
...
LL |         self.sleep.poll(cx)
   |                    ^^^^ method not found in `Sleep`
   |
help: consider pinning the expression
   |
LL ~         let mut pinned = std::pin::pin!(self.sleep);
LL ~         pinned.as_mut().poll(cx)
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
